fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -8,25 +9,34 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+* {
+  padding:0;
+	margin:0;
+	font-family: 'Nunito Sans', sans-serif;
+	scroll-behavior: smooth;
+}
+
 .header {
-  background-color: rgba(90, 96, 103, .8);
-  color: #f3f3f3;
-  width: 100%;
+  
+  background-color: #40A2E3;
+  position: sticky;
+  height: 60px;
+  top: 0;
+  z-index: 1000;
   display: flex;
   justify-content: left;
+  gap: 10px;
+  flex-wrap: wrap;
   padding: 20px;
-  gap: 20px;
-  align-items: center;
-  height: 50px;
-  font-size: larger;
+  color: whitesmoke;
 }
 
 .banner {
   width: 100%;
   display: flex;
-  justify-content: center;
-  margin: 30px;
+  justify-content: left;
   align-items: left;
+  padding: 50px;
   flex-direction: column;
   gap: 10px;
 }
@@ -68,8 +78,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
-  margin: 30px;
   flex-direction: column;
   gap: 10px;
 }
